# Travel-Planner-Decision-Maker

./: .env.example  .gitignore  README.md  ai_planning_project_dump.sql  docker-compose.yml  pyproject.toml  requirements.txt  requirements_daniel.txt  waypoints_dump.sql
data/: Bus Stops.csv  MRT Stations.csv  attractions.csv  bus_stop_to_id.json  bus_stops.csv  fare_type.json  foodcentre.csv  hawker_centers.csv  hotels.csv  mrt_stations.csv  mrt_stop_to_id.json  places.txt  preference.csv  route_map.html  route_matrix.json  route_statistics.csv
init/: init.sql
notebooks/: Experiment_CPLEX.ipynb  Experiment_Problem.ipynb  Experiment_PyMoo.ipynb  Experiment_Simplified_Problem.ipynb  Two_Routes_Visual.ipynb  Visual.py  an_itinerary_with_diff_places.html  farrer_park_to_smu_two_routes.html  input_data.json  test.py  test_locations.json
noteboooks/: Experiment: PyMoo.ipynb  Experiment_PyMoo.ipynb
paper/: ecai.cls  mitb-ai.tex  mybibfile.bib
results/: best_itinerary_20250321_180840.txt  best_itinerary_20250321_184534.txt  best_itinerary_20250322_014039.txt  best_itinerary_20250323_003822.json  best_itinerary_20250324_013858.json  best_itinerary_20250324_200042.json  best_itinerary_20250324_215917.json  best_itinerary_20250325_005439.json  best_itinerary_20250325_011228.json  best_itinerary_20250325_012807.json  best_itinerary_20250325_134058.json  best_itinerary_20250325_134428.json  best_itinerary_20250326_140616.json  best_itinerary_20250326_152224.json  best_itinerary_20250326_182247.json  best_itinerary_20250327_145825.json  best_itinerary_20250327_150119.json  best_itinerary_20250327_162838.json  best_itinerary_20250327_163315.json  best_itinerary_20250327_204059.json  best_itinerary_20250330_015929.json  best_itinerary_20250401_072927.json  best_itinerary_20250401_203214.json  best_itinerary_20250401_204747.json  best_itinerary_20250403_152754.json  best_itinerary_20250404_134416.json  best_objectives.npy  best_solution.npy  init_solution.npy  initial_itinerary_20250323_003817.json  initial_itinerary_20250323_034951.json  initial_itinerary_20250324_025910.json  initial_itinerary_20250325_005437.json  initial_itinerary_20250325_011226.json  initial_itinerary_20250325_012804.json  initial_itinerary_20250325_134041.json  initial_itinerary_20250325_134417.json  initial_itinerary_20250326_140608.json  initial_itinerary_20250327_145803.json  initial_itinerary_20250327_150108.json  (+12 more)
src/: README.md  (+21 more)
(+448 files in other folders)
