[project]
name = "travel-planner-decision-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel James",email = "156598376+danieljamesMitb@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "pymoo (>=0.6.1.3,<0.7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "agno (>=1.2.4,<2.0.0)",
    "openai (>=1.68.2,<2.0.0)",
    "langchain-groq (>=0.3.1,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "duckduckgo-search (>=7.5.4,<8.0.0)",
    "googlesearch-python (>=1.3.0,<2.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "pgvector (>=0.4.0,<0.5.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "osmnx (>=2.0.2,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "streamlit-folium (>=0.24.0,<0.25.0)",
    "psycopg[binary,pool] (>=3.2.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
